cambio de titulo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Mi primer App</title>
+  <title>Etiqueta encabezado - resultado esperado</title>
 </head>
 <body> <h1>Título principal de la practica HTML   </h1>
 	<p>Estamos aprendiendo HTML y necesitamos practicar para que se nos fije el conocimiento, en poco tiempo voy a poder maquetar un sitio web completo. en este documento de practica veremos los distintos HTML que podemos encontrar </p>
