pvinculando ccs a html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<h1>Mi Porfolio
-</h1>
-<p>Modificación en el repositorio remoto
-</p>
+<!DOCTYPE html>
+  <html>
+    <head>
+        <link href="styles.css" rel="stylesheet" type="text/css">
+         </head>
+    <body>
+    <h1>Mi Porfolio</h1>
+    <p>Modificación en el repositorio remoto</p>
+    </body>
+</html>
